force-app/main/default/objects/Expense__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the corresponding contact record</description>
    <inlineHelpText>Id of the corresponding contact record</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select only an HL contact</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <infoMessage>Please select an HL contact</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>