force-app/main/default/objects/Expense__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>Employee full name who incurred the expense</description>
    <formula>Contact__r.Contact_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee full name who incurred the expense</inlineHelpText>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>