force-app/main/default/objects/Expense__c/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <description>Employee&apos;s business unit in ERP</description>
    <label>ERP Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>