force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>Expense type for the transaction</description>
    <inlineHelpText>Expense type for the transaction</inlineHelpText>
    <label>Expense Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>