force-app/main/default/objects/Expense__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <description>Date when the transaction was accounted. Also represents the Accounting Date and the Period Date (from the PERIOD_NAME).</description>
    <inlineHelpText>Date when the transaction was accounted. Also represents the Accounting Date and the Period Date (from the PERIOD_NAME).</inlineHelpText>
    <label>GL Date</label>
    <type>DateTime</type>
</CustomField>