force-app/main/default/objects/Expense__c/fields/Hold_Intercompany_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Hold_Intercompany_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Intercompany Invoice</label>
    <type>Checkbox</type>
</CustomField>