force-app/main/default/objects/Expense__c/fields/IC_Invoiced_Amount_In_Ledger_Currency__c.field-meta.xml
<CustomField>
    <fullName>IC_Invoiced_Amount_In_Ledger_Currency__c</fullName>
    <description>Inter-Company Invoiced Expense Amount In Ledger Currency</description>
    <inlineHelpText>Inter-Company Invoiced Expense Amount In Ledger Currency</inlineHelpText>
    <label>IC Invoiced Amount In Ledger Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>