force-app/main/default/objects/Expense__c/fields/Intercompany_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Intercompany_Invoice_Status__c</fullName>
    <label>Intercompany Invoice Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>