force-app/main/default/objects/Expense__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>