force-app/main/default/objects/Expense__c/fields/Invoiced_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Expense_Amount__c</fullName>
    <label>Invoiced Expense Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>