force-app/main/default/objects/Expense__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the expense is billable</description>
    <inlineHelpText>Indicates if the expense is billable</inlineHelpText>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>