force-app/main/default/objects/Expense__c/fields/Is_Billed__c.field-meta.xml
<CustomField>
    <fullName>Is_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the expenses has been tagged to an invoice</description>
    <inlineHelpText>Indicates if the expenses has been tagged to an invoice</inlineHelpText>
    <label>Is Billed</label>
    <type>Checkbox</type>
</CustomField>