force-app/main/default/objects/Expense__c/fields/Is_Selected_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Is_Selected_for_Billing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the expense is selected for billing; it&apos;s selected by default</description>
    <inlineHelpText>Indicates if the expense is selected for billing; it&apos;s selected by default</inlineHelpText>
    <label>Is Selected for Billing</label>
    <type>Checkbox</type>
</CustomField>