force-app/main/default/objects/Expense__c/fields/My_Deal__c.field-meta.xml
<CustomField>
    <fullName>My_Deal__c</fullName>
    <formula>IF(OR(Engagement__r.My_Engagement__c, Opportunity__r.My_Opportunity__c), TRUE, FALSE)</formula>
    <label>My Deal</label>
    <type>Checkbox</type>
</CustomField>