force-app/main/default/objects/Expense__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>Remark for the expense</description>
    <inlineHelpText>Remark for the expense</inlineHelpText>
    <label>Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>