force-app/main/default/objects/Expense__c/fields/Revenue_Status__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Status__c</fullName>
    <label>Revenue Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>