force-app/main/default/objects/Expense__c/fields/STAFFID_c__c.field-meta.xml
<CustomField>
    <fullName>STAFFID_c__c</fullName>
    <description>Staff Id that is fed from HL_STAFF into Oracle</description>
    <inlineHelpText>Staff Id that is fed from HL_STAFF into Oracle</inlineHelpText>
    <label>STAFFID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>