force-app/main/default/objects/Expense__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <label>Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>