force-app/main/default/objects/Expense__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>The date the expense incurred</description>
    <inlineHelpText>The date the expense incurred</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>