force-app/main/default/objects/Expense__c/listViews/All_Engagement_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Engagement_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Invoiced_Expense_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Engagement Expenses</label>
</ListView>