force-app/main/default/objects/Expense__c/listViews/All_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Invoiced_Expense_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Expenses</label>
</ListView>